--- a/BlazorWallAreaCalculator/_Imports.razor
+++ b/BlazorWallAreaCalculator/_Imports.razor
@@ -8,4 +8,12 @@
 @using Microsoft.JSInterop
 @using BlazorWallAreaCalculator
 @using BlazorWallAreaCalculator.Shared
-@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Popups
+@using Syncfusion.Blazor.Data
+@using Syncfusion.Blazor.DropDowns
+@using Syncfusion.Blazor.Navigations
+@using Syncfusion.Blazor.Lists
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Buttons
+@using Syncfusion.Blazor.Notifications
