--- a/BlazorWallAreaCalculator/Shared/MainLayout.razor
+++ b/BlazorWallAreaCalculator/Shared/MainLayout.razor
@@ -13,7 +13,9 @@
         </div>
 
         <article class="content px-4">
-            @Body
+            @Body   
+            <Syncfusion.Blazor.Popups.SfDialogProvider />
         </article>
+
     </main>
 </div>
